--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Andrea Gosset</title>
 </head>
 <body>
-    <h1>Andrea Gosset Soto</h1>
+    <h1>Andrea Patricia Gosset Soto</h1>
 </body>
 </html>
